docs(api): produced documentation of codes endpoints
